# Coral-Model-Public

./: .gitignore  4.1 Validation outputs.ipynb  Bubble chart.ipynb  Coral_model.ipynb  Coral_model_1D.ipynb  Coral_model_exporting_data_and_plotting.ipynb  Coral_model_exports_figures.ipynb  Coral_model_figure exports_2.ipynb  Inputs A1 Myrmidon base condition 12112025.py  Overview of modelling data_2024 FINAL.xlsx  README.md  Sedi_plotting.ipynb  Sedi_plotting_w_customGBayGraphs.ipynb  Sedi_testing_Coral_model.ipynb  Sediment_recovery_lag_diagnostic.ipynb  Sediment_testing.ipynb  Sediment_testing_sedi.ipynb  app.py  config.py  config_main11092025.py  config_sedi.py  config_sedi2_pcm_w_gr_nt_w_11092025.py  coral_cover_data.xlsx  coral_data_and_custom_parameters.xlsx  coral_model_custom_parameters.xlsx  environment_windows.yml  install_deps.bat  launch_dashboard.bat  pyproject.toml  script to plot GR vs DS +SS for MG.R  testingsedi2.ipynb  user_inputs.py  user_inputs_sedi.py  utils.py  utils_gr_nt_running_11092025.py  utils_sedi.py  ~$coral_cover_data.xlsx
.ipynb_checkpoints/: Coral_model-checkpoint.ipynb  Coral_model_1D-checkpoint.ipynb  Coral_model_exporting_data_and_plotting-checkpoint.ipynb  Coral_model_exports_figures-checkpoint.ipynb  Coral_model_figure exports_2-checkpoint.ipynb  README-checkpoint.md  Sediment_testing-checkpoint.ipynb  Untitled-checkpoint.ipynb  config-checkpoint.py  input converter-checkpoint.ipynb  user_inputs-checkpoint.py  utils-checkpoint.py
4.1 Myrmidon Happy reef/: Coral_model.ipynb  coral_data_and_custom_parameters.xlsx  (+1 more)
(+2596 files in other folders)
